--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[project.scripts]
+tsl_tools = "tsl_tools:main"
+
 [tool.uv]
 dev-dependencies = ["basedpyright>=1.18.4", "ruff>=0.6.1"]
 
